manifests/gatekeeper/finops_pods_labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-gk
spec:
  match:
    kinds:
      - apiGroups:
        - ""
        kinds:
        - "Pod"
      - apiGroups:
        - apps
        kinds:
        - ReplicaSet
      - apiGroups:
        - argoproj.io
        kinds:
        - Rollout
    namespaces:
      - demo
  enforcementAction: deny
  parameters:
    labels:
        tribe: "mycompany-12345"
        type: "backend"
